# reativa

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  dune-project  package-lock.json  package.json  reativa.opam
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: app.ml  dune  index.html
demo/ui/: app.ml  app.mlx  dune  index.html  jsx.html  jsx_app.ml  todo.mlx
examples/jsoo/: README.md  dom.ml  dune  history.ml  index.html  reativa.ml  router_demo.ml
examples/jsoo/router/: index.html
ppx/: dune  reativa_jsx_ppx.ml  reativa_mlx_ppx.ml
scripts/: serve-demo.mjs
src/: dom.ml  dune  history.ml  reativa.ml  reativa_runtime.js  router.ml  router_match.ml  view.ml
src/signals/: computed.ml  core.ml  effect.ml  id.ml  scheduler.ml  signal.ml
test/: dune  test_mlx_inference.ml  test_ppx_rewrite.ml  test_router.ml  test_signals.ml
ui/: dom.ml  dune  view.ml
website/: index.html  vite.config.mjs
website/src/: app.ml  app.mlx  dune  main.js  styles.css
