opam-version: "2.0"
synopsis: "Fine-grained reactive web interfaces for OCaml and Melange"
description: """
Reativa builds reactive browser interfaces with OCaml and Melange. Its
fine-grained reactive core provides Signal, Computed, Effect and a glitch-free
scheduler, while the View layer mounts real DOM nodes and updates reactive
text, attributes and dynamic regions in place.
"""
maintainer: "Bernardo Gurgel <brnrdog@hey.com>"
authors: "Bernardo Gurgel <brnrdog@hey.com>"
license: "MIT"
homepage: "https://github.com/brnrdog/reativa"
bug-reports: "https://github.com/brnrdog/reativa/issues"
dev-repo: "git+https://github.com/brnrdog/reativa.git"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.8"}
  "melange" {>= "3.0.0"}
  "ppxlib"
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
