(include_subdirs unqualified)

; Reativa compiles both to JavaScript via Melange and to native/bytecode. The
; browser-facing DOM/View modules are present in the same package namespace but
; only exercised by Melange targets.
(library
 (name reativa)
 (modes melange native)
 (preprocess
  (pps melange.ppx)))
