; Compiles the mlx-backed view demo to JavaScript ES modules under
; demo/ui/output/. Bundle the emitted entry for the browser with esbuild; see
; the npm "demo" script.
(melange.emit
 (target output)
 (modules app todo)
 (libraries reativa)
 (preprocess
  (pps reativa.mlx_ppx melange.ppx))
 (module_systems es6))
